add link campus logo

--- a/footer.html
+++ b/footer.html
@@ -135,9 +135,7 @@
                         <ul id="foot-links">
                             <li><a href="cgu.html">CGU</a></li>
                             <li><a href="contact.html">Contact</a></li>
-                            <li>
-                                <a href="mention.html"> Mentions légales </a>
-                            </li>
+                            <li><a href="mention.html">Mentions légales</a></li>
                         </ul>
                     </div>
                     <ul>
