--- a/create-2.html
+++ b/create-2.html
@@ -18,11 +18,7 @@
     <body>
         <header class="main-header">
             <div class="logo">
-                <a href="index.html"
-                    ><img
-                        src="/assets/img/src/logo_campus_transparent.PNG.png"
-                        alt=""
-                /></a>
+                <a href="index.html"><img src="/assets/img/dist/logo_campus_transparent.PNG.png" alt="logo Campus"></a>
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
