fix gap bug on chrome mobil

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <h2>Bienvenue sur notre accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web du Campus Du Lac.</h2>
+                        <h2>Bienvenue sur notre page d'accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web du Campus Du Lac.</h2>
                         <img src="./assets/img/dist/bg-header.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
