change images and fix some bugs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Projet Hackaton</title>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css"
@@ -65,7 +66,7 @@
                 <ul class="splide__list">
                     <li class="splide__slide">
                         <h2>Bienvenue sur notre page d'accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web du Campus Du Lac.</h2>
-                        <img src="./assets/img/dist/bg-header.jpg" alt="" />
+                        <img src="./assets/img/dist/bg-header.png" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Web Devs</h2>
@@ -73,21 +74,21 @@
                     </li>
                     <li class="splide__slide">
                         <h2>Web Designer</h2>
-                        <img src="./assets/img/dist/design.jpg" alt="" />
+                        <img src="./assets/img/dist/design.png" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Chef de projet Webmarketing</h2>
-                        <img src="./assets/img/dist/cpw.jpg" alt="" />
+                        <img src="./assets/img/dist/cpw.png" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Graphistes</h2>
-                        <img src="./assets/img/dist/graph.jpg" alt="" />
+                        <img src="./assets/img/dist/graph.png" alt="" />
                     </li>
                 </ul>
             </div>
         </div>
         <h1 class="title">Derniers Projets des élèves</h1>
-        <section id="last-project" class="portfolio">
+        <section data-aos="fade-up" id="last-project" class="portfolio">
             <article
                 data-aos="fade-right"
                 data-aos-duration="200"
@@ -371,9 +372,9 @@
             </div>
         </footer>
         <script src="./assets/js/app.js"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
         <script src="./assets/js/dist/scripts.min.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
             AOS.init();
         </script>
