--- a/project.html
+++ b/project.html
@@ -40,7 +40,7 @@
     </div>
     <section id="project-section">
         <div class="project-container">
-            <img src="./assets/img/dist/card1.jpg" alt="">
+            <img src="./assets/img/dist/card1.png" alt="">
             <h2>Project 1</h2>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                 labore et dolore magna aliquyam erat, sed diam voluptua. <br>At vero eos et accusam et justo duo
@@ -77,13 +77,13 @@
                     </li>
                     <li class="splide__slide">
                         <a href="project.html">
-                            <img src="./assets/img/dist/card1.jpg" alt="">
+                            <img src="./assets/img/dist/card1.png" alt="">
                         </a>
                         <h2 class="text-pro">Project 3</h2>
                     </li>
                     <li class="splide__slide">
                         <a href="project.html">
-                            <img src="./assets/img/dist/section-3.jpg" alt="">
+                            <img src="./assets/img/dist/section-3.png" alt="">
                         </a>
                         <h2 class="text-pro">Project 4</h2>
                     </li>
@@ -95,7 +95,7 @@
                     </li>
                     <li class="splide__slide slide_project ">
                         <a href="project.html">
-                            <img src="./assets/img/dist/section-4.jpg" alt="">
+                            <img src="./assets/img/dist/section-4.png" alt="">
                         </a>
                         <h2 class="text-pro">Project 6</h2>
                     </li>
