--- a/index-v2.html
+++ b/index-v2.html
@@ -59,23 +59,23 @@
                 <ul class="splide__list">
                     <li class="splide__slide">
                         <h2>Bienvenue sur notre accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web du Campus Du Lac.</h2>
-                        <img src="./assets/img/dist/bg-header.jpg" alt="" />
+                        <img src="./assets/img/dist/bg-header.png" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Web Devs</h2>
-                        <img src="./assets/img/dist/dev.jpg" alt="" />
+                        <img src="./assets/img/dist/dev.png" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Web Designer</h2>
-                        <img src="./assets/img/dist/design.jpg" alt="" />
+                        <img src="./assets/img/dist/design.png" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Chef de projet Webmarketing</h2>
-                        <img src="./assets/img/dist/cpw.jpg" alt="" />
+                        <img src="./assets/img/dist/cpw.png" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Graphistes</h2>
-                        <img src="./assets/img/dist/graph.jpg" alt="" />
+                        <img src="./assets/img/dist/graph.png" alt="" />
                     </li>
                 </ul>
             </div>
