LAST COMMIT I HOPE !!!!!!

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,11 @@
         <!-- MENU -->
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/dist/logo_campus_transparent.PNG.png" alt="">
+                <a href="index.html"
+                    ><img
+                        src="/assets/img/dist/logo_campus_transparent.PNG.png"
+                        alt=""
+                /></a>
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
