--- a/index-v2.html
+++ b/index-v2.html
@@ -14,7 +14,11 @@
     <body id="new-version-body">
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/dist/logo_campus_transparent.PNG.png" alt="">
+                <a href="index.html"
+                    ><img
+                        src="/assets/img/dist/logo_campus_transparent.PNG.png"
+                        alt=""
+                /></a>
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -58,7 +62,11 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <h2>Bienvenue sur notre accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web du Campus Du Lac.</h2>
+                        <h2>
+                            Bienvenue sur notre accueil, d'ici vous pouvez
+                            accéder aux portfolios de toutes les sections web du
+                            Campus Du Lac.
+                        </h2>
                         <img src="./assets/img/dist/bg-header.png" alt="" />
                     </li>
                     <li class="splide__slide">
