--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Projet Hackaton</title>
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link
+            href="https://unpkg.com/aos@2.3.1/dist/aos.css"
+            rel="stylesheet"
+        />
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css"
@@ -26,7 +29,11 @@
     <body>
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/dist/logo_campus_transparent.PNG.png" alt="">
+                <a href="index.html"
+                    ><img
+                        src="/assets/img/dist/logo_campus_transparent.PNG.png"
+                        alt="logo campus"
+                /></a>
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -65,7 +72,11 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <h2>Bienvenue sur notre page d'accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web du Campus Du Lac.</h2>
+                        <h2>
+                            Bienvenue sur notre page d'accueil, d'ici vous
+                            pouvez accéder aux portfolios de toutes les sections
+                            web du Campus Du Lac.
+                        </h2>
                         <img src="./assets/img/dist/bg-header.png" alt="" />
                     </li>
                     <li class="splide__slide">
@@ -88,7 +99,7 @@
             </div>
         </div>
         <h1 class="title">Derniers Projets des élèves</h1>
-        <section data-aos="fade-up" id="last-project" class="portfolio">
+        <section id="last-project" class="portfolio">
             <article
                 data-aos="fade-right"
                 data-aos-duration="200"
@@ -134,7 +145,7 @@
             <article
                 data-aos="fade-right"
                 data-aos-duration="200"
-                data-aos-offset="500"
+                data-aos-offset="300"
                 id="last-project-4"
                 class="card"
             >
@@ -149,7 +160,7 @@
             <article
                 data-aos="fade-up"
                 data-aos-duration="200"
-                data-aos-offset="600"
+                data-aos-offset="400"
                 id="last-project-5"
                 class="card"
             >
@@ -164,7 +175,7 @@
             <article
                 data-aos="fade-left"
                 data-aos-duration="200"
-                data-aos-offset="700"
+                data-aos-offset="500"
                 id="last-project-6"
                 class="card"
             >
