--- a/portfolio-section-graph.html
+++ b/portfolio-section-graph.html
@@ -5,7 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Projet Hackaton</title>
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link
+            href="https://unpkg.com/aos@2.3.1/dist/aos.css"
+            rel="stylesheet"
+        />
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css"
@@ -20,7 +23,11 @@
     <body>
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/dist/logo_campus_transparent.PNG.png" alt="">
+                <a href="index.html"
+                    ><img
+                        src="/assets/img/dist/logo_campus_transparent.PNG.png"
+                        alt=""
+                /></a>
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
