--- a/userport.html
+++ b/userport.html
@@ -247,5 +247,15 @@
                 </div>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js">
+        </script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js%22%3E"></script>
+        <script src="./assets/js/dist/scripts.min.js"></script>
+        <script>
+            new Splide('#splide', {
+                perPage: 1,
+                rewind: true,
+            }).mount();
+        </script>
     </body>
 </html>
